--- a/index.html
+++ b/index.html
@@ -2,8 +2,87 @@
 <html>
 <head>
 	<title>SpaceNext</title>
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="css/custom.css">
+	<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+	<meta charset="utf-8">
 </head>
 <body>
-hello
+
+
+<nav class="navbar transparent navbar-inverse ">
+  <div class="container-fluid navbar-fixed-top">
+    <div class="navbar-header">
+    <a class="navbar-brand" href="#" style="margin-bottom: 5px">
+	    <img alt="Brand" src="img/logo.png" width="70px" height="45px">
+	</a>
+    </div>
+    <ul class="nav navbar-nav navbar-right" style="margin-top: 3px">
+      <li class="activeh"><a href="#">Home</a></li>
+      <li ><a href="#">Industrial Visit</a></li>
+      <li><a href="#">Quiz / Games</a></li>
+      <li><a href="#">Knowledge Center</a></li>
+      <li><a href="login.html">Login</a></li>
+    </ul>
+  </div>
+</nav>
+<img class="back" src="img/b1.jpg" width="100%" height="100%">
+
+<a href="javascript:" id="return-to-top"><i class="icon-chevron-up"></i></a>
+
+<a href="#exp">
+<div class="explore">
+	<p>Explore</p>
+</div>
+</a>
+
+
+
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+
+
+
+<div id="exp">
+	hello
+</div>
+
+<script type="text/javascript">
+	$(window).scroll(function() {
+    if ($(this).scrollTop() >= 50) {        // If page is scrolled more than 50px
+        $('#return-to-top').fadeIn(200);    // Fade in the arrow
+    } else {
+        $('#return-to-top').fadeOut(200);   // Else fade out the arrow
+    }
+	});
+	$('#return-to-top').click(function() {      // When arrow is clicked
+	    $('body,html').animate({
+	        scrollTop : 0                       // Scroll to top of body
+	    }, 500);
+	});
+</script>
+
 </body>
 </html>
