--- a/fac_login.html
+++ b/fac_login.html
@@ -133,7 +133,7 @@ body { font-size:14px; }
 				<label >Username:</label>
 			</div>
 			<div class="col-md-5 ">
-				<input type="text" name="funame" class="inputc" required>
+				<input type="text" name="uname" class="inputc" required>
 			</div>		
 		</div>
 		<div class="row fields">
@@ -142,13 +142,19 @@ body { font-size:14px; }
 				<label >Password:</label>
 			</div>
 			<div class="col-md-5 ">
-				<input type="Password" name="fpass" class="inputc" required>
+				<input type="Password" name="pass" class="inputc" required>
 			</div>		
 		</div>
 		
-			<div class="col-md-5"></div>
-			<input type="button" value="Submit" name="submit" />  
-			<!-- IF LOGIN CORRECT REDIRECT TO faculty_logged_in/form.html -->
+			<div class="col-md-5" style="margin-left: 10px;"></div>
+			<input type="button" value="Submit" name="submit" />
+
+			<br><br>
+			<center>
+			<a href="stu_login.html"><input type="button" value="Back to student" name="submit" /> </a>
+			</center>
+
+			<!-- IF LOGIN CORRECT REDIRECT TO faculty_logged_in/index.html -->
 	</form>
 
 
