--- a/faculty_logged_in/form.html
+++ b/faculty_logged_in/form.html
@@ -81,7 +81,7 @@ body { font-size:14px; }
 <li class="page_item page-item-21"><a href="form.html">Industrial Visit</a></li>
 <li class="page_item page-item-23"><a href="http://localhost/wordpress/quiz-games/">Quiz / Games</a></li>
 <li class="page_item page-item-25"><a href="http://localhost/wordpress/knowledge-centre/">Knowledge Centre</a></li>
-<li class="page_item page-item-27"><a href="http://localhost/wordpress/login/">Login</a></li>
+<li class="page_item page-item-27"><a href="../index.html">Logout</a></li>
 </ul></div>
 			</nav>
 		</div>
@@ -97,7 +97,7 @@ body { font-size:14px; }
 			<li class="page_item page-item-21"><a href="form.html">Industrial Visit</a></li>
 			<li class="page_item page-item-23"><a href="http://localhost/wordpress/quiz-games/">Quiz / Games</a></li>
 			<li class="page_item page-item-25"><a href="http://localhost/wordpress/knowledge-centre/">Knowledge Centre</a></li>
-			<li class="page_item page-item-27"><a href="http://localhost/wordpress/login/">Login</a></li>
+			<li class="page_item page-item-27"><a href="../index.html">Logout</a></li>
 			</ul></div>
 				</nav>
 		</footer>
@@ -208,6 +208,7 @@ body { font-size:14px; }
 			</table>
 			<div class="col-md-5"></div>
 			<input type="button" value="Submit" name="submit" /> 
+			<!-- Send the details to iv table -->
 
 
 <!-- 	</div>
