--- a/student_logged_in/index.html
+++ b/student_logged_in/index.html
@@ -98,7 +98,7 @@ body { font-size:14px; }
 <li class="page_item page-item-21"><a href="form.html">Industrial Visit</a></li>
 <li class="page_item page-item-23"><a href="http://localhost/wordpress/quiz-games/">Quiz / Games</a></li>
 <li class="page_item page-item-25"><a href="http://localhost/wordpress/knowledge-centre/">Knowledge Centre</a></li>
-<li class="page_item page-item-27"><a href="http://localhost/wordpress/login/">Login</a></li>
+<li class="page_item page-item-27"><a href="../index.html">Logout</a></li>
 </ul></div>
 			</nav><!-- #site-navigation -->
 		</div>
@@ -169,7 +169,7 @@ body { font-size:14px; }
 <li class="page_item page-item-21"><a href="form.html">Industrial Visit</a></li>
 <li class="page_item page-item-23"><a href="http://localhost/wordpress/quiz-games/">Quiz / Games</a></li>
 <li class="page_item page-item-25"><a href="http://localhost/wordpress/knowledge-centre/">Knowledge Centre</a></li>
-<li class="page_item page-item-27"><a href="http://localhost/wordpress/login/">Login</a></li>
+<li class="page_item page-item-27"><a href="../index.html">Logout</a></li>
 </ul></div>
 				</nav><!-- #site-navigation -->
 				<div class="site-copyright">
