--- a/faculty_logged_in/industrial_visit.html
+++ b/faculty_logged_in/industrial_visit.html
@@ -78,7 +78,7 @@ body { font-size:14px; }
 			<nav id="mainnav" class="main-navigation col-md-8 col-sm-6 col-xs-12" role="navigation">
 				<div id="primary-menu" class="menu"><ul>
 <li class="page_item page-item-2"><a href="index.html">Home</a></li>
-<li class="page_item page-item-21"><a href="form.html">Industrial Visit</a></li>
+<li class="page_item page-item-21"><a href="ivform.html">Industrial Visit</a></li>
 <li class="page_item page-item-23"><a href="http://localhost/wordpress/quiz-games/">Quiz / Games</a></li>
 <li class="page_item page-item-25"><a href="http://localhost/wordpress/knowledge-centre/">Knowledge Centre</a></li>
 <li class="page_item page-item-27"><a href="stu_login.html">Login</a></li>
@@ -94,7 +94,7 @@ body { font-size:14px; }
 				<nav id="footernav" class="footer-navigation" role="navigation">
 					<div id="footer-menu" class="menu"><ul>
 			<li class="page_item page-item-2"><a href="index.html">Home</a></li>
-			<li class="page_item page-item-21"><a href="form.html">Industrial Visit</a></li>
+			<li class="page_item page-item-21"><a href="ivform.html">Industrial Visit</a></li>
 			<li class="page_item page-item-23"><a href="http://localhost/wordpress/quiz-games/">Quiz / Games</a></li>
 			<li class="page_item page-item-25"><a href="http://localhost/wordpress/knowledge-centre/">Knowledge Centre</a></li>
 			<li class="page_item page-item-27"><a href="stu_login.html">Login</a></li>
