--- a/admin_logged_in/create_fac_acc.html
+++ b/admin_logged_in/create_fac_acc.html
@@ -83,7 +83,7 @@ body { font-size:14px; }
 <li class="page_item page-item-21"><a href="industrial_visit.html">Industrial Visit</a></li>
 <li class="page_item page-item-23"><a href="http://localhost/wordpress/quiz-games/">Quiz / Games</a></li>
 <li class="page_item page-item-25"><a href="http://localhost/wordpress/knowledge-centre/">Knowledge Centre</a></li>
-<li class="page_item page-item-27"><a href="stu_login.html">Login</a></li>
+<li class="page_item page-item-27"><a href="../index.html">Logout</a></li>
 </ul></div>
 			</nav>
 		</div>
@@ -99,7 +99,7 @@ body { font-size:14px; }
 			<li class="page_item page-item-21"><a href="industrial_visit.html">Industrial Visit</a></li>
 			<li class="page_item page-item-23"><a href="http://localhost/wordpress/quiz-games/">Quiz</a></li>
 			<li class="page_item page-item-25"><a href="http://localhost/wordpress/knowledge-centre/">Knowledge Centre</a></li>
-			<li class="page_item page-item-27"><a href="stu_login.html">Login</a></li>
+			<li class="page_item page-item-27"><a href="../index.html">Logout</a></li>
 			</ul></div>
 				</nav>
 		</footer>
@@ -198,10 +198,31 @@ body { font-size:14px; }
 			<div class="col-md-5 ">
 				<input type="Password" name="pass" class="inputc" required>
 			</div>		
+		<br><br>
+		<div class="row">
+			<div class="col-md-3">
+				
+			</div>
+			<div class="col-md-8">
+				<div class="row fields">
+					<div class="col-md-3">
+						<input type="button" value="Accept" name="accept" />
+					</div>
+					<div class="col-md-3"></div>
+					<div class="col-md-3">
+						<input type="button" value="Decline" name="decline" />
+					</div>
+				</div>
+			</div>
+			<div class="col-md-3">
+				
+			</div>
+			
 		</div>
+			
 
-			<div class="col-md-5"></div>
-			<input type="button" value="Submit" name="submit" />  
+		
+			
 			<!-- just add to database in faculty table -->
 	</form>
 
