submit button corrected

--- a/admin_logged_in/create_fac_acc.html
+++ b/admin_logged_in/create_fac_acc.html
@@ -198,11 +198,11 @@ body { font-size:14px; }
 			<div class="col-md-8">
 				<div class="row fields">
 					<div class="col-md-3">
-						<input type="button" value="Accept" name="accept" />
+						<input type="submit" value="Accept" name="accept" />
 					</div>
 					<div class="col-md-3"></div>
 					<div class="col-md-3">
-						<input type="button" value="Decline" name="decline" />
+						<input type="submit" value="Decline" name="decline" />
 					</div>
 				</div>
 			</div>
