--- a/fac_reg.html
+++ b/fac_reg.html
@@ -201,7 +201,7 @@ body { font-size:14px; }
 		</div>
 
 			<div class="col-md-5"></div>
-			<input type="button" value="Submit" name="submit" />  
+			<input type="submit" value="Submit" name="submit" />  
 			<!-- just add to database in faculty table with confirmed value 0 -->
 	</form>
 
