--- a/stu_reg.html
+++ b/stu_reg.html
@@ -157,8 +157,9 @@ body { font-size:14px; }
 		</div>
 		<br>
 			<center>
-			<!-- JUST ADD TO DATABASE IN STUDENT TABLE -->
-				<input type="button" value="Submit" name="submit" style="margin-left: 10px;" /> 
+			<!-- JUST ADD TO DATABASE IN STUDENT TABLE -->	
+				
+				<input type="submit" value="Submit" name="submit" style="margin-left: 10px;" /> 
 			</center>
 				
 
