--- a/admin_login.html
+++ b/admin_login.html
@@ -148,7 +148,7 @@ body { font-size:14px; }
 		<br>
 			<center>
 			<!-- IF LOGIN CORRECT REDIRECT TO admin_logged_in/index.html -->
-				<input type="button" value="Submit" name="submit" style="margin-left: 10px;" /> 
+				<input type="submit" value="Submit" name="submit" style="margin-left: 10px;" /> 
 			</center>
 				 
 				
