--- a/faculty_logged_in/ivform.html
+++ b/faculty_logged_in/ivform.html
@@ -198,7 +198,7 @@ body { font-size:14px; }
 		</table>
 
 			<div class="col-md-5"></div>
-			<input type="button" value="Submit" name="submit" /> 
+			<input type="submit" value="Submit" name="submit" /> 
 			<!-- Send the details to iv table -->
 
 
@@ -218,9 +218,12 @@ body { font-size:14px; }
 <script type="text/javascript">
 	
 function addRow(tableID) {
+	var x = document.getElementsByName("nstudents")[0].value;
+	var nos = Number(x);
+
 	var table = document.getElementById(tableID);
 	var rowCount = table.rows.length;
-	if(rowCount < 5){                            // limit the user from creating fields more than your limits
+	if(rowCount < nos){                            // limit the user from creating fields more than your limits
 		var row = table.insertRow(rowCount);
 		var colCount = table.rows[0].cells.length;
 		for(var i=0; i <colCount; i++) {
@@ -229,7 +232,7 @@ function addRow(tableID) {
 			newcell.innerHTML = table.rows[0].cells[i].innerHTML;
 		}
 	}else{
-		 alert("Maximum no. of students reached");
+		 alert("Maximum no. of students "+ nos +" reached");
 			   
 	}
 }
