--- a/stu_reg.html
+++ b/stu_reg.html
@@ -75,14 +75,14 @@ body { font-size:14px; }
 	<header id="masthead" class="site-header has-header" role="banner">
 		<div class="container">
 			<div class="site-branding col-md-4 col-sm-6 col-xs-12">
-				<h1 class="site-title"><a href="http://localhost/wordpress/" rel="home">SpaceNext</a></h1><p class="site-description"></p>			</div>
+				<h1 class="site-title"><a href="#" rel="home">SpaceNext</a></h1><p class="site-description"></p>			</div>
 			<div class="btn-menu col-md-8 col-sm-6 col-xs-12"><i class="fa fa-navicon"></i></div>
 			<nav id="mainnav" class="main-navigation col-md-8 col-sm-6 col-xs-12" role="navigation">
 				<div id="primary-menu" class="menu"><ul>
 <li class="page_item page-item-2"><a href="index.html">Home</a></li>
 <li class="page_item page-item-21"><a href="industrial_visit.html">Industrial Visit</a></li>
-<li class="page_item page-item-23"><a href="http://localhost/wordpress/quiz-games/">Quiz / Games</a></li>
-<li class="page_item page-item-25"><a href="http://localhost/wordpress/knowledge-centre/">Knowledge Centre</a></li>
+<li class="page_item page-item-23"><a href="#">Quiz</a></li>
+<li class="page_item page-item-25"><a href="#">Knowledge Centre</a></li>
 <li class="page_item page-item-27"><a href="stu_login.html">Login</a></li>
 </ul></div>
 			</nav>
@@ -97,8 +97,8 @@ body { font-size:14px; }
 					<div id="footer-menu" class="menu"><ul>
 			<li class="page_item page-item-2"><a href="index.html">Home</a></li>
 			<li class="page_item page-item-21"><a href="industrial_visit.html">Industrial Visit</a></li>
-			<li class="page_item page-item-23"><a href="http://localhost/wordpress/quiz-games/">Quiz</a></li>
-			<li class="page_item page-item-25"><a href="http://localhost/wordpress/knowledge-centre/">Knowledge Centre</a></li>
+			<li class="page_item page-item-23"><a href="#">Quiz</a></li>
+			<li class="page_item page-item-25"><a href="#">Knowledge Centre</a></li>
 			<li class="page_item page-item-27"><a href="stu_login.html">Login</a></li>
 			</ul></div>
 				</nav>
@@ -163,7 +163,7 @@ body { font-size:14px; }
 			</center>
 			<br>
 			<center>
-				<iframe name="result" width="500" height="50"></iframe>
+				<iframe name="result" width="540" height="50" style="margin-left: 37px;border:0px;"></iframe>
 			<center>
 
 			<br>
