registration forms done

--- a/fac_reg.html
+++ b/fac_reg.html
@@ -139,11 +139,9 @@ body { font-size:14px; }
 <div>
 <div class="col-md-2"></div>
 <div class="col-md-8">
-<<<<<<< HEAD
+
 	<form class="form" action="fac_reg.php" method="post" style="margin-bottom: 50px" target="result">
-=======
-	<form class="form" action="create_fac_acc.php" method="post" target="_blank" style="margin-bottom: 50px; padding-bottom: 80px">
->>>>>>> c01b71dc844a476c294458b0e9baea5005f10f09
+
 		<div class="row fields">
 		<div class="col-md-3"></div>
 			<div class="col-md-2">
@@ -169,11 +167,8 @@ body { font-size:14px; }
 				<label >Phone No:</label>
 			</div>
 			<div class="col-md-5 ">
-<<<<<<< HEAD
-				<input type="number" name="phoneno" class="inputc" required>
-=======
+
 				<input type="number" name="phoneno" class="inputc" required id="phoneno" style="color: black">  
->>>>>>> c01b71dc844a476c294458b0e9baea5005f10f09
 				<!-- restrict to 10 digits -->
 			</div>
 		</div>
@@ -221,29 +216,30 @@ body { font-size:14px; }
 			</div>
 		</div>
 
-<<<<<<< HEAD
-			<div class="col-md-5"></div>
-			<input type="submit" value="Submit" name="submit" />
-			<br>
-			<br>
-            <center>
-                <iframe name="result" width="500" height="50"></iframe>
-            <center>
-=======
-			
-			
-			<br><br><br><br><br>
 
-			<div class="col-md-5" ></div>
-			<div >
+			<div class="col-md-5"></div>
+			<br>
+			<br>
+
+          
+
+			
+			
+			<br><br>
+			<br>
+
+			<div class="col-md-5"></div>
+			<div>
 				<input type="submit" id="submit_button" value="Submit" name="submit" class="submit_button" />  
 			</div>
-			
->>>>>>> c01b71dc844a476c294458b0e9baea5005f10f09
+			<br><br>
+			<br><br>
+  			<iframe name="result" width="500" height="50" style="margin-left: 180px;border:0px;"></iframe>
+
 			<!-- just add to database in faculty table with confirmed value 0 -->
 	</form>
 		
-
+		
 		<div class="col-md-4 "></div>
 		<button onclick="validate_phone_no()" class="validate_button">Validate Phone No.</button>
 
