--- a/stu_reg.html
+++ b/stu_reg.html
@@ -91,18 +91,18 @@ body { font-size:14px; }
 			<div class="header-image">
 
 
-		<footer id="colophon" class="site-footer" role="contentinfo">
-			<div class="site-info container">
-				<nav id="footernav" class="footer-navigation" role="navigation">
-					<div id="footer-menu" class="menu"><ul>
-			<li class="page_item page-item-2"><a href="index.html">Home</a></li>
-			<li class="page_item page-item-21"><a href="industrial_visit.html">Industrial Visit</a></li>
-			<li class="page_item page-item-23"><a href="#">Quiz</a></li>
-			<li class="page_item page-item-25"><a href="#">Knowledge Centre</a></li>
-			<li class="page_item page-item-27"><a href="stu_login.html">Login</a></li>
-			</ul></div>
-				</nav>
-		</footer>
+                <footer id="colophon" class="site-footer" role="contentinfo">
+                    <div class="site-info container">
+                        <nav id="footernav" class="footer-navigation" role="navigation">
+                            <div id="footer-menu" class="menu"><ul>
+                    <li class="page_item page-item-2"><a href="index.html"></a></li>
+                    <li class="page_item page-item-21"><a href="industrial_visit.html"></a></li>
+                    <li class="page_item page-item-23"><a href="#"></a></li>
+                    <li class="page_item page-item-25"><a href="#"></a></li>
+                    <li class="page_item page-item-27"><a href="stu_login.html"></a></li>
+                    </ul></div>
+                        </nav>
+                </footer>
 
 		</div>
 </div>
