not a user yet=>already registered in studen reg

--- a/stu_reg.html
+++ b/stu_reg.html
@@ -180,7 +180,7 @@ body { font-size:14px; }
 
 			</div>
 			<div class="col-md-3">
-				<a href="stu_reg.html"><input type="button" value="Not a user yet ?" name="submit" /> </a>
+				<a href="stu_login.html"><input type="button" value="Already registered?" name="submit" /> </a>
 			</div>
 
 			</div>
