--- a/faculty_logged_in/industrial_visit.html
+++ b/faculty_logged_in/industrial_visit.html
@@ -114,7 +114,7 @@ body { font-size:14px; }
 <h1>CONTENT</h1>
 
 <div class="button header-button">
-	<a href="fac_login.html">Book Now</a>
+	<a href="ivform.html">Book Now</a>
 </div>
 
 
