--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <title>SpaceNext</title>
 <link rel="dns-prefetch" href="http://fonts.googleapis.com/">
 <link rel="dns-prefetch" href="http://s.w.org/">
+<link rel="stylesheet" type="text/css" href="index.css">
 <link rel="alternate" type="application/rss+xml" title="SpaceNext » Feed" href="http://localhost/wordpress/feed/">
 <link rel="alternate" type="application/rss+xml" title="SpaceNext » Comments Feed" href="http://localhost/wordpress/comments/feed/">
 		<script type="text/javascript">
@@ -115,7 +116,7 @@ body { font-size:14px; }
 		
 
 				
-	
+<!-- 	
 	<div id="content" class="site-content">
 		<div class="container">
 
@@ -130,12 +131,17 @@ body { font-size:14px; }
 	</div><!-- #primary -->
 
 
-		</div>
-	</div><!-- #content -->
+		</div>	
+	</div><!-- #content --> 	
 
 
 <div id="explore">
-	about us
+	<p class="title titlec">
+		About us
+	</p> 
+	<p class="contentc">
+		We here at SpaceNext are the leaders for developing state of the art technology for space and extraterrestrial research. We specialize in developing innovative and sustainable approach towards designing economical engines and software. Our recent contributions include designing the vector-directional path synthesizer and vibrational proto-sensor software for the cryogenic engine used in the GSLV launch machine used by ISRO and ISS renovation shuttle launched by ESA. It is our aim to catalyze the research in development in the field of Outer Space and propel humanity into a new age.
+	</p>
 </div>
 
 
