studen login auth done

--- a/fac_login.html
+++ b/fac_login.html
@@ -83,7 +83,7 @@ body { font-size:14px; }
 <li class="page_item page-item-21"><a href="industrial_visit.html">Industrial Visit</a></li>
 <li class="page_item page-item-23"><a href="#">Quiz</a></li>
 <li class="page_item page-item-25"><a href="#">Knowledge Centre</a></li>
-<li class="page_item page-item-27"><a href="stu_login.html">Login</a></li>
+<li class="page_item page-item-27"><a href="stu_login.php">Login</a></li>
 </ul></div>
 			</nav>
 		</div>
@@ -156,7 +156,7 @@ body { font-size:14px; }
 
 			</div>
 			<div class="col-md-3" style="margin-left: 20px">
-				<a href="stu_login.html"><input type="button" value="Back to student" name="back_to_stud" /> </a>
+				<a href="stu_login.php"><input type="button" value="Back to student" name="back_to_stud" /> </a>
 			</div>
 			<div class="col-md-1">
 
