--- a/fac_reg.html
+++ b/fac_reg.html
@@ -96,7 +96,7 @@ body { font-size:14px; }
 <li class="page_item page-item-21"><a href="industrial_visit.html">Industrial Visit</a></li>
 <li class="page_item page-item-23"><a href="#">Quiz</a></li>
 <li class="page_item page-item-25"><a href="#">Knowledge Centre</a></li>
-<li class="page_item page-item-27"><a href="stu_login.html">Login</a></li>
+<li class="page_item page-item-27"><a href="stu_login.php">Login</a></li>
 </ul></div>
 			</nav>
 		</div>
