--- a/stu_reg.html
+++ b/stu_reg.html
@@ -83,7 +83,7 @@ body { font-size:14px; }
 <li class="page_item page-item-21"><a href="industrial_visit.html">Industrial Visit</a></li>
 <li class="page_item page-item-23"><a href="#">Quiz</a></li>
 <li class="page_item page-item-25"><a href="#">Knowledge Centre</a></li>
-<li class="page_item page-item-27"><a href="stu_login.html">Login</a></li>
+<li class="page_item page-item-27"><a href="stu_login.php">Login</a></li>
 </ul></div>
 			</nav>
 		</div>
@@ -180,7 +180,7 @@ body { font-size:14px; }
 
 			</div>
 			<div class="col-md-3">
-				<a href="stu_login.html"><input type="button" value="Already registered?" name="submit" /> </a>
+				<a href="stu_login.php"><input type="button" value="Already registered?" name="submit" /> </a>
 			</div>
 
 			</div>
