static pages done

--- a/admin_login.html
+++ b/admin_login.html
@@ -81,9 +81,9 @@ body { font-size:14px; }
 				<div id="primary-menu" class="menu"><ul>
 <li class="page_item page-item-2"><a href="index.html">Home</a></li>
 <li class="page_item page-item-21"><a href="industrial_visit.html">Industrial Visit</a></li>
-<li class="page_item page-item-23"><a href="http://localhost/wordpress/quiz-games/">Quiz / Games</a></li>
-<li class="page_item page-item-25"><a href="http://localhost/wordpress/knowledge-centre/">Knowledge Centre</a></li>
-<li class="page_item page-item-27"><a href="stu_login.html">Login</a></li>
+<li class="page_item page-item-23"><a href="quiz.html">Quiz</a></li>
+<li class="page_item page-item-25"><a href="kcenter.html">Knowledge Centre</a></li>
+<li class="page_item page-item-27"><a href="stu_login.php">Login</a></li>
 </ul></div>
 			</nav>
 		</div>
@@ -95,11 +95,11 @@ body { font-size:14px; }
 			<div class="site-info container">
 				<nav id="footernav" class="footer-navigation" role="navigation">
 					<div id="footer-menu" class="menu"><ul>
-			<li class="page_item page-item-2"><a href="index.html">Home</a></li>
-			<li class="page_item page-item-21"><a href="industrial_visit.html">Industrial Visit</a></li>
-			<li class="page_item page-item-23"><a href="http://localhost/wordpress/quiz-games/">Quiz / Games</a></li>
-			<li class="page_item page-item-25"><a href="http://localhost/wordpress/knowledge-centre/">Knowledge Centre</a></li>
-			<li class="page_item page-item-27"><a href="stu_login.html">Login</a></li>
+			<li class="page_item page-item-2"><a href="index.html"></a></li>
+			<li class="page_item page-item-21"><a href="industrial_visit.html"></a></li>
+			<li class="page_item page-item-23"><a href="http://localhost/wordpress/quiz-games/"></a></li>
+			<li class="page_item page-item-25"><a href="http://localhost/wordpress/knowledge-centre/"></a></li>
+			<li class="page_item page-item-27"><a href="stu_login.html"></a></li>
 			</ul></div>
 				</nav>
 		</footer>
