--- a/faculty_logged_in/ivform.html
+++ b/faculty_logged_in/ivform.html
@@ -83,9 +83,9 @@ body { font-size:14px; }
 			<nav id="mainnav" class="main-navigation col-md-8 col-sm-6 col-xs-12" role="navigation">
 				<div id="primary-menu" class="menu"><ul>
 <li class="page_item page-item-2"><a href="index.html">Home</a></li>
-<li class="page_item page-item-21"><a href="ivform.html">Industrial Visit</a></li>
-<li class="page_item page-item-23"><a href="#">Quiz</a></li>
-<li class="page_item page-item-25"><a href="#">Knowledge Centre</a></li>
+<li class="page_item page-item-21"><a href="#">Industrial Visit</a></li>
+<li class="page_item page-item-23"><a href="quiz.html">Quiz</a></li>
+<li class="page_item page-item-25"><a href="kcenter.html">Knowledge Centre</a></li>
 <li class="page_item page-item-27"><a href="../index.html">Logout</a></li>
 </ul></div>
 			</nav>
@@ -98,11 +98,11 @@ body { font-size:14px; }
 			<div class="site-info container">
 				<nav id="footernav" class="footer-navigation" role="navigation">
 					<div id="footer-menu" class="menu"><ul>
-			<li class="page_item page-item-2"><a href="index.html">Home</a></li>
-			<li class="page_item page-item-21"><a href="ivform.html">Industrial Visit</a></li>
-			<li class="page_item page-item-23"><a href="#">Quiz</a></li>
-			<li class="page_item page-item-25"><a href="#">Knowledge Centre</a></li>
-			<li class="page_item page-item-27"><a href="../index.html">Logout</a></li>
+			<li class="page_item page-item-2"><a href="index.html"></a></li>
+			<li class="page_item page-item-21"><a href="ivform.html"></a></li>
+			<li class="page_item page-item-23"><a href="#"></a></li>
+			<li class="page_item page-item-25"><a href="#"></a></li>
+			<li class="page_item page-item-27"><a href="../index.html"></a></li>
 			</ul></div>
 				</nav>
 		</footer>
