--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@ body { font-size:14px; }
 			<div class="btn-menu col-md-8 col-sm-6 col-xs-12"><i class="fa fa-navicon"></i></div>
 			<nav id="mainnav" class="main-navigation col-md-8 col-sm-6 col-xs-12" role="navigation">
 				<div id="primary-menu" class="menu"><ul>
-<li class="page_item page-item-2"><a href="#">Home</a></li>
+<li class="page_item page-item-2"><a href="index.html">Home</a></li>
 <li class="page_item page-item-21"><a href="industrial_visit.html">Industrial Visit</a></li>
-<li class="page_item page-item-23"><a href="#">Quiz</a></li>
-<li class="page_item page-item-25"><a href="#">Knowledge Centre</a></li>
+<li class="page_item page-item-23"><a href="quiz.html">Quiz</a></li>
+<li class="page_item page-item-25"><a href="kcenter.html">Knowledge Centre</a></li>
 <li class="page_item page-item-27"><a href="stu_login.php">Login</a></li>
 </ul></div>
 			</nav><!-- #site-navigation -->
@@ -160,9 +160,9 @@ body { font-size:14px; }
 					<div id="footer-menu" class="menu"><ul>
 <li class="page_item page-item-2"><a href="#">Home</a></li>
 <li class="page_item page-item-21"><a href="industrial_visit.html">Industrial Visit</a></li>
-<li class="page_item page-item-23"><a href="#">Quiz</a></li>
-<li class="page_item page-item-25"><a href="#">Knowledge Centre</a></li>
-<li class="page_item page-item-27"><a href="stu_login.html">Login</a></li>
+<li class="page_item page-item-23"><a href="quiz.html">Quiz</a></li>
+<li class="page_item page-item-25"><a href="kcenter">Knowledge Centre</a></li>
+<li class="page_item page-item-27"><a href="stu_login.php">Login</a></li>
 </ul></div>
 				</nav><!-- #site-navigation -->
 				<div class="site-copyright">
