--- a/admin_logged_in/index.html
+++ b/admin_logged_in/index.html
@@ -76,6 +76,12 @@ body { font-size:14px; }
     margin-left: 0px !important;
 }
 
+	.create_fac_acc_button{
+					position: absolute;
+					z-index: 51;
+					margin-left: 950px;
+				}
+
 
 
 </style></head>
@@ -100,8 +106,8 @@ body { font-size:14px; }
 				<div id="primary-menu" class="menu"><ul>
 <li class="page_item page-item-2"><a href="#">Home</a></li>
 <li class="page_item page-item-21"><a href="industrial_visit.html">Industrial Visit</a></li>
-<li class="page_item page-item-23"><a href="#">Quiz</a></li>
-<li class="page_item page-item-25"><a href="#">Knowledge Centre</a></li>
+<li class="page_item page-item-23"><a href="quiz.html">Quiz</a></li>
+<li class="page_item page-item-25"><a href="kcenter.html">Knowledge Centre</a></li>
 <li class="page_item page-item-27"><a href="../index.html">Logout</a></li>
 </ul></div>
 			</nav><!-- #site-navigation -->
@@ -113,7 +119,7 @@ body { font-size:14px; }
 		<div class="header-info">
 
 			<div class="container">
-
+<a class="button header-button create_fac_acc_button" href="create_fac_acc.php">Create Faculty<br>&emsp;Account</a>
 				<h4 class="header-subtext">Sky isn't the limit.Space is limitless!!!</h4>
 				
 				<h3 class="header-text">Spacenext</h3><a class="button header-button" href="#explore">Explore</a>
@@ -126,17 +132,13 @@ body { font-size:14px; }
 			</div>
 
 
-		<!-- 	<a class="button header-button create_fac_acc_button" href="create_fac_acc.html">Create Faculty<br>&emsp;Account</a>
+		<!-- 	
 			<a class="button header-button upload_rp_button" href="upload_rp.html">Upload Research<br>&emsp;Papers</a>
 			<a class="button header-button upload_quiz_button" href="upload_quiz.html">Upload Quiz</a> -->
-<!-- 
-				.create_fac_acc_button{
-					position: absolute;
-					z-index: 51;
-					margin-left: 950px;
-				}
 
-				.upload_quiz_button{
+			
+
+<!-- 			.upload_quiz_button{
 					position: absolute;
 					z-index: 51;
 					margin-left: 965px;
