--- a/management_logged_in/index.html
+++ b/management_logged_in/index.html
@@ -97,8 +97,8 @@ body { font-size:14px; }
 				<div id="primary-menu" class="menu"><ul>
 <li class="page_item page-item-2"><a href="#">Home</a></li>
 <li class="page_item page-item-21"><a href="industrial_visit.html">Industrial Visit</a></li>
-<li class="page_item page-item-23"><a href="#">Quiz</a></li>
-<li class="page_item page-item-25"><a href="#">Knowledge Centre</a></li>
+<li class="page_item page-item-23"><a href="quiz.html">Quiz</a></li>
+<li class="page_item page-item-25"><a href="kcenter.html">Knowledge Centre</a></li>
 <li class="page_item page-item-27"><a href="../index.html">Logout</a></li>
 </ul></div>
 			</nav><!-- #site-navigation -->
