removed duplicate pdfs

--- a/industrial_visit.html
+++ b/industrial_visit.html
@@ -133,7 +133,7 @@ body { font-size:14px; }
 	</p>
 
 <div>
-	<a class="button header-button" href="fac_login.html" style="margin-bottom: 100px;">Book Now</a>
+	<a class="button header-button book_button" href="fac_login.html" style="margin-bottom: 100px;">Book Now</a>
 </div>
 
 
